--- a/style.css
+++ b/style.css
@@ -31,7 +31,29 @@ body {
     background-color: #f0ad4e;
     border-color: #eea236;
     /* margin-right: 16px; */
-    margin: 7px;
+    margin: 10px;
+}
+.active1{
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    background-color: rgb(132, 93, 238);
 }
 .left {
     
