--- a/style.css
+++ b/style.css
@@ -22,4 +22,8 @@ button.genscript { background:#00B597; color: #fff; border: none; padding: 15px;
 div#canvas { background: #efefef; height: calc( 100% - 40px ); margin: 20px; overflow-y: auto; box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.39); padding: 20px;}
 
 
-div.element { border: solid 1px #999; border-radius: 4px; min-height: 50px; margin: 10px 0; padding: 10px; }
+div.element { border: solid 1px #999; border-radius: 4px; min-height: 80px; margin: 10px 0; padding: 10px; position: relative; overflow: hidden;}
+
+.el_span { border : solid 1px #333; background-color: #3E5260;color: #e1e1e1; border-radius : 4px; position: absolute; margin-bottom: 10px; padding: 5px; top: 0; left: 0; width: 70px; font-size: 10px; height: 40px}
+.glyphicon { float: right; width: 10px; height: 10px; display: flex}
+.el_span2 { float:  right; display: grid; grid-template-columns: 1fr 1fr; grid-gap: 20px;background-color: #3E5260;color: #e1e1e1; border : solid 1px #333; border-radius : 4px; position: absolute; margin-bottom: 10px; padding: 5px; top: 0; right: 0; width: 50px; font-size: 10px; height: 40px}
