--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ div.el_conditions { border: solid 1px #999; border-radius: 4px; min-height: 25px
     left: 0;
     right: 0;
     bottom: 0;
+    display: none;
 }
 #overlay pre {
     background-color: rgba(0,0,0,.9);
